# google-calendar-to-markdown

./: README.md  dump-cal.py  pyproject.toml
