[tool.poetry]
name = "google-calendar-to-markdown"
version = "0.1.0"
description = "Simple script to dump a google calendar as markdown."
authors = ["Shaun Verch <public@shaunverch.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ics = "^0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
